--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Tech for Girls Registration</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <div class="container">
+    <h1>🚀 Tech for Girls Registration</h1>
+    <form id="registrationForm">
+      <label>Name:</label>
+      <input type="text" id="name" required />
 
+      <label>Phone Number:</label>
+      <input type="number" id="phone" required />
+
+      <label>Email ID:</label>
+      <input type="email" id="email" required />
+
+      <label>College/Department:</label>
+      <input type="text" id="college" required />
+
+      <label>Upload Screenshot:</label>
+      <input type="file" id="screenshot" accept="image/*,.pdf" required />
+
+      <div class="share-section">
+        <button type="button" id="whatsappShareBtn">📤 Share on WhatsApp</button>
+        <p id="clickCount">Click count: 0 / 5</p>
+        <p id="shareCompleteMsg" class="hidden">✅ Sharing complete. Please continue.</p>
+      </div>
+
+      <button type="submit" id="submitBtn">Submit Registration</button>
+    </form>
+
+    <div id="thankYouMsg" class="hidden">
+      🎉 Your submission has been recorded. Thanks for being part of Tech for Girls!
+    </div>
+  </div>
+
+  <script src="script.js"></script>
+</body>
+</html>
